<resources>
    <string name="app_name">User Input</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="enter_surname">Enter Surname</string>
    <string name="enter_email_address">Enter Email Address</string>
    <string name="enter_date_of_birth">Enter date of birth</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="accept_terms_and_conditions">Accept Terms and Conditions</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Log In</string>
    <string name="log_in_button">Log In</string>
    <string-array name="type">
        <item>Mobile</item>
        <item>Home</item>
        <item>Work</item>
        <item>Other</item>

    </string-array>
</resources>