<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/dance"
    tools:context=".MainActivity">



    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="21dp"
        android:src="@drawable/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:textSize="32sp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:orientation="horizontal">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:hint="@string/enter_first_name"
            android:textColorHint="@color/white"
            android:textColor="@color/white"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_surname"
            android:textColorHint="@color/white"
            android:layout_marginStart="72dp"
            android:textColor="@color/white"/>

    </LinearLayout>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:hint="@string/enter_email_address"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:hint="@string/enter_date_of_birth"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:inputType="date"/>
        <ImageView
            android:id="@+id/datepicker"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_marginStart="9dp"
            android:src="@drawable/mycalender"/>

    </LinearLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:textColor="@color/white"
        android:textColorHint="@color/white"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:hint="@string/enter_password"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textPassword"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:textColorHint="@color/white"
            android:layout_marginStart="45dp"
            android:inputType="textPassword"
            android:textColor="@color/white"/>
    </LinearLayout>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="@string/accept_terms_and_conditions"
        android:textColor="@color/white"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_gravity="center"
        android:background="@drawable/circle"
        android:text="@string/create_account"/>


</LinearLayout>