<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ropes"
    tools:context=".LoginActivity">
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="21dp"
        android:src="@drawable/logo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="6dp"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:textSize="32sp"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"

        android:hint="@string/enter_email_address"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:inputType="textEmailAddress"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:layout_gravity="center"

        android:hint="@string/enter_password"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:inputType="textPassword"/>
    <Button
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_gravity="center"
        android:background="@drawable/circle"
        android:text="@string/log_in_button"
        android:textStyle="bold"/>

</LinearLayout>